@@ -2,7 +2,6 @@ package org.jabref.gui.openoffice;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 
@@ -51,7 +50,6 @@ public class DetectOpenOfficeInstallation {
                 .withInitialDirectory(nativeDesktop.getApplicationDirectory())
                 .build();
         return dialogService.showDirectorySelectionDialog(dirDialogConfiguration);
-
     }
 
     private boolean autoDetectPaths() {
@@ -76,7 +74,7 @@ public class DetectOpenOfficeInstallation {
      */
     private boolean checkAutoDetectedPaths(OpenOfficePreferences openOfficePreferences) {
         String executablePath = openOfficePreferences.getExecutablePath();
-        return !StringUtil.isNullOrEmpty(executablePath) && Files.exists(Paths.get(executablePath));
+        return !StringUtil.isNullOrEmpty(executablePath) && Files.exists(Path.of(executablePath));
     }
 
     private boolean setOpenOfficePreferences(Path installDir) {
@@ -120,5 +118,4 @@ public class DetectOpenOfficeInstallation {
 
         return selectedPath;
     }
-
 }
